--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name=".SignInActivity"/>
         <activity android:name=".SignUpActivity"/>
         <activity android:name=".ForgetPasswordActivity"/>
+        <activity android:name=".UserActivity"/>
+        <activity android:name=".CommentActivity"/>
+        <activity android:name=".NewPasswordActivity"/>
     </application>
 
 </manifest>
