--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,18 +26,8 @@
         <activity
             android:name=".MapsActivity"
             android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".StartActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
         <activity
-            android:name=".PackageActivity"
+            android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignInActivity" />
@@ -60,7 +51,7 @@
         <activity android:name=".DetailHotelActivity"/>
         <activity android:name=".LocationActivity"/>
         <activity android:name=".ChangeProfileActivity"/>
-<!--        <activity android:name=".PackageActivity"/>-->
+        <activity android:name=".PackageActivity"/>
         <activity android:name=".PaymentMethodActivity"/>
         <activity android:name=".TransactionActivity"/>
     </application>
