--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,17 @@
         <activity
             android:name=".MapsActivity"
             android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".StartActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
-            android:name=".StartActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,26 +44,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity" />
+<!--        <activity android:name=".MainActivity" />-->
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".ChatBoxActivity" />
         <activity android:name=".UserActivity" />
-        <activity android:name=".AvatarActvity"/>
+        <activity android:name=".AvatarActivity"/>
         <activity android:name=".CommentActivity" />
         <activity android:name=".NewPasswordActivity" />
         <activity android:name=".CameraActivity"/>
-        <activity android:name=".HotelActivity"/>
-        <activity android:name=".DetailHotelActivity"/>
+        <activity android:name=".ListLocationlActivity"/>
+        <activity android:name=".DetailLocationActivity"/>
         <activity android:name=".StatusActivity"/>
         <activity android:name=".LocationActivity"/>
         <activity android:name=".ChangeProfileActivity"/>
         <activity android:name=".PackageActivity"/>
         <activity android:name=".PaymentMethodActivity"/>
         <activity android:name=".TransactionActivity"/>
+        <activity android:name=".QRcodeActivity"/>
+        <activity android:name=".TermOfServiceActivity"/>
+        <activity android:name=".PrivacyPolicyActivity"/>
+        <activity android:name=".NewStatusActivity"/>
     </application>
 
 </manifest>
