--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -44,6 +43,9 @@ dependencies {
     implementation libs.camera.view
     implementation libs.play.services.maps
     implementation libs.zxing.android.embedded
+    implementation libs.core
+    implementation libs.play.services.auth
+    implementation libs.zxing
     implementation libs.retrofit
     implementation libs.converter.gson
     implementation libs.java.jwt
