fetch api for locations, list locations, detail locations, update profile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation libs.retrofit
     implementation libs.converter.gson
     implementation libs.java.jwt
+    implementation libs.glide
+    annotationProcessor libs.glide.compiler
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
