--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -21,7 +22,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDjRoWlA-3QiL23KMWnc52mjTiPm3-4lBU" />
+            android:value="AIzaSyCsptcRuVn3qA9n6WtHldNX-itYUJhu_G8" />
 
         <activity
             android:name=".MapsActivity"
@@ -46,7 +47,7 @@
         <activity android:name=".CommentActivity" />
         <activity android:name=".NewPasswordActivity" />
         <activity android:name=".CameraActivity"/>
-        <activity android:name=".ListLocationlActivity"/>
+        <activity android:name=".ListLocationActivity"/>
         <activity android:name=".DetailLocationActivity"/>
         <activity android:name=".StatusActivity"/>
         <activity android:name=".LocationActivity"/>
