fix crash list location, bypass trust SSL certificate for image url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation libs.converter.gson
     implementation libs.java.jwt
     implementation libs.glide
+    implementation libs.okhttp3.integration
     annotationProcessor libs.glide.compiler
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
