--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation libs.zxing
     implementation libs.retrofit
     implementation libs.converter.gson
+    implementation libs.gson
     implementation libs.java.jwt
     implementation libs.glide
     implementation libs.okhttp3.integration
