--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.3.1"
 compiler = "4.16.0"
 glide = "4.16.0"
+gson = "2.11.0"
 javaJwt = "3.18.2"
 core = "3.4.0"
 junit = "4.13.2"
@@ -27,6 +28,7 @@ camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = 
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 java-jwt = { module = "com.auth0:java-jwt", version.ref = "javaJwt" }
 core = { module = "com.google.zxing:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
