--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation libs.java.jwt
     implementation libs.glide
     implementation libs.okhttp3.integration
+    implementation libs.circleimageview
     annotationProcessor libs.glide.compiler
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
