--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.3.1"
+circleimageview = "3.1.0"
 compiler = "4.16.0"
 glide = "4.16.0"
 gson = "2.11.0"
@@ -25,6 +26,7 @@ zxingAndroidEmbedded = "4.1.0"
 camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
 camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraView" }
 camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraView" }
+circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
