--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".PrivacyPolicyActivity"/>
         <activity android:name=".NewStatusActivity"/>
         <activity android:name=".ListStatusActivity"/>
+        <activity android:name=".ImageActivity"/>
     </application>
 
 </manifest>
